# finserv-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  models.py  pyproject.toml  requirements.txt  test.py
